Another wave of generics and source cleanups around DOL
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>