@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2022 Contributors to the Eclipse Foundation
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -15,10 +16,6 @@
  */
 
 package com.sun.enterprise.deployment.node;
-
-import java.util.HashMap;
-import java.util.Map;
-import java.util.logging.Level;
 
 import com.sun.enterprise.deployment.AdminObject;
 import com.sun.enterprise.deployment.AuthMechanism;
@@ -43,22 +40,31 @@ import com.sun.enterprise.deployment.xml.RuntimeTagNames;
 import com.sun.enterprise.deployment.xml.TagNames;
 import com.sun.enterprise.deployment.xml.WebServicesTagNames;
 
+import java.util.HashMap;
+import java.util.Map;
+import java.util.logging.Level;
+
 /**
  * This class is responsible for instantiating  Descriptor classes
  *
  * @author  Jerome Dochez
- * @version
  */
 public class DescriptorFactory {
 
-    static Map descriptorClasses;
+    static Map<String, Class<?>> descriptorClasses;
+
+    static {
+        initMapping();
+    }
+
 
     /** This is a factory object no need for DescriptorFactory instance */
     protected DescriptorFactory() {
     }
 
+
     private static void initMapping() {
-        descriptorClasses = new HashMap();
+        descriptorClasses = new HashMap<>();
 
         // Application
         register(new XMLElement(RuntimeTagNames.APPLICATION_PARAM), EnvironmentProperty.class);
@@ -79,24 +85,19 @@ public class DescriptorFactory {
         register(new XMLElement(ConnectorTagNames.CONNECTION_DEFINITION), ConnectionDefDescriptor.class);
 
         // JSR 109 integration
-        register(new XMLElement(WebServicesTagNames.SERVICE_REF),ServiceReferenceDescriptor.class);
-        register(new XMLElement(WebServicesTagNames.PORT_INFO),
-               com.sun.enterprise.deployment.ServiceRefPortInfo.class);
-        register(new XMLElement(WebServicesTagNames.STUB_PROPERTY),
-                 NameValuePairDescriptor.class);
-        register(new XMLElement(WebServicesTagNames.CALL_PROPERTY),
-                 NameValuePairDescriptor.class);
+        register(new XMLElement(WebServicesTagNames.SERVICE_REF), ServiceReferenceDescriptor.class);
+        register(new XMLElement(WebServicesTagNames.PORT_INFO), com.sun.enterprise.deployment.ServiceRefPortInfo.class);
+        register(new XMLElement(WebServicesTagNames.STUB_PROPERTY), NameValuePairDescriptor.class);
+        register(new XMLElement(WebServicesTagNames.CALL_PROPERTY), NameValuePairDescriptor.class);
 
         // persistence.xsd related entries (JSR 220)
         // Note we do not register PersistenceUnitsDescriptor, because that
         // is created by PersistenceDeploymentDescriptorFile.getRootXMLNode().
-        register(new XMLElement(PersistenceTagNames.PERSISTENCE_UNIT),
-                 PersistenceUnitDescriptor.class);
-        register(new XMLElement(TagNames.PERSISTENCE_CONTEXT_REF),
-                 EntityManagerReferenceDescriptor.class);
-        register(new XMLElement(TagNames.PERSISTENCE_UNIT_REF),
-                 EntityManagerFactoryReferenceDescriptor.class);
+        register(new XMLElement(PersistenceTagNames.PERSISTENCE_UNIT), PersistenceUnitDescriptor.class);
+        register(new XMLElement(TagNames.PERSISTENCE_CONTEXT_REF), EntityManagerReferenceDescriptor.class);
+        register(new XMLElement(TagNames.PERSISTENCE_UNIT_REF), EntityManagerFactoryReferenceDescriptor.class);
     }
+
 
     /**
      * register a new descriptor class handling a particular XPATH in the DTD.
@@ -104,7 +105,7 @@ public class DescriptorFactory {
      * @param xmlPath absolute or relative XPath
      * @param clazz the descriptor class to use
      */
-    public static void register(XMLElement  xmlPath, Class clazz) {
+    public static void register(XMLElement xmlPath, Class<?> clazz) {
         if (DOLUtils.getDefaultLogger().isLoggable(Level.FINE)) {
             DOLUtils.getDefaultLogger().fine("Register " + clazz + " to handle " + xmlPath.getQName());
         }
@@ -114,25 +115,26 @@ public class DescriptorFactory {
     /**
      * @return the descriptor tag for a particular XPath
      */
-    public static Class getDescriptorClass(String xmlPath) {
-        String s = xmlPath;
+    public static Class<?> getDescriptorClass(String xmlPath) {
+        String originalXmlPath = xmlPath;
         do {
             if (DOLUtils.getDefaultLogger().isLoggable(Level.FINER)) {
                 DOLUtils.getDefaultLogger().finer("looking for " + xmlPath);
             }
-            if (descriptorClasses.containsKey(xmlPath)) {
-                return (Class) descriptorClasses.get(xmlPath);
+            final Class<?> clazz = descriptorClasses.get(xmlPath);
+            if (clazz != null) {
+                return clazz;
             }
-            if (xmlPath.indexOf('/')!=-1) {
-                xmlPath = xmlPath.substring(xmlPath.indexOf('/')+1);
+            if (xmlPath.indexOf('/') == -1) {
+                xmlPath = null;
             } else {
-                xmlPath=null;
+                xmlPath = xmlPath.substring(xmlPath.indexOf('/') + 1);
             }
         } while (xmlPath != null);
 
         if (DOLUtils.getDefaultLogger().isLoggable(Level.SEVERE)) {
             DOLUtils.getDefaultLogger().log(Level.SEVERE, DOLUtils.INVALID_DESC_MAPPING,
-                new Object[] {"No descriptor registered for " + s});
+                new Object[] {"No descriptor registered for " + originalXmlPath});
         }
         return null;
     }
@@ -144,17 +146,13 @@ public class DescriptorFactory {
      */
     public static Object getDescriptor(String xmlPath) {
         try {
-            Class c = getDescriptorClass(xmlPath);
+            Class<?> c = getDescriptorClass(xmlPath);
             if (c != null) {
-                return c.newInstance();
+                return c.getDeclaredConstructor().newInstance();
             }
         } catch (Throwable t) {
             DOLUtils.getDefaultLogger().log(Level.WARNING, "Error occurred", t);
         }
         return null;
-    }
-
-    static {
-        initMapping();
     }
 }
